# exifsort

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/exifsort/: __init__.py  args.py  core.py  models.py  print.py
tests/: test_args.py  test_core.py  test_core_functions.py  test_print.py
