[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exifsort"
version = "0.2.2"
description = "ExifSort - sort media files into date-based folders by reading EXIF creation date."
readme = "README.md"
authors = [
    { name = "barabasz", email = "exifsort@anba.ovh" }
]
license = { text = "MIT" }

requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "exif",
    "auto-organization",
    "auto-sort",
    "photo-management",
    "photo-organization"
]

dependencies = [
    "TyConf",
    "PyExifTool"
]

[project.optional-dependencies]
toml = ["tomli-w>=1.0.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/barabasz/exifsort"
Repository = "https://github.com/barabasz/exifsort"
Issues = "https://github.com/barabasz/exifsort/issues"
Changelog = "https://github.com/barabasz/exifsort/blob/main/CHANGELOG.md"

[project.scripts]
exifsort = "exifsort.core:main"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["exifsort"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]
